--- a/script/manifest.json
+++ b/script/manifest.json
@@ -2,11 +2,11 @@
     "name": "PWA sample for mobile kit",
     "short_name": "MKit",
     "icons": [{
-          "src": "https://app.saitama-cmcc.ac.jp/saitama-pwa/notify2/images/icon192.png",
+          "src": "images/icon192.png",
           "sizes": "192x192",
           "type": "image/png"
         }],
-    "start_url": "https://app.saitama-cmcc.ac.jp/saitama-pwa/notify2/index.html",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#3E4EB8",
     "theme_color": "#2F3BA2"
