--- a/script/manifest.json
+++ b/script/manifest.json
@@ -2,7 +2,7 @@
     "name": "PWA sample for mobile kit",
     "short_name": "MKit",
     "icons": [{
-          "src": "images/icon192.png",
+          "src": "../images/icon192.png",
           "sizes": "192x192",
           "type": "image/png"
         }],
