--- a/script/manifest.json
+++ b/script/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "PWA sample for mobile kit",
-    "short_name": "MKit",
-    "icons": [{
-          "src": "../images/icon192.png",
-          "sizes": "192x192",
-          "type": "image/png"
-        }],
-    "start_url": "index.html",
-    "display": "standalone",
-    "background_color": "#3E4EB8",
-    "theme_color": "#2F3BA2"
-  }
+	"short_name": "PWAサンプル",
+	"name": "PWAサンプルアプリ",
+	"display": "standalone",
+	"start_url": "index.html",
+	"icons": [
+		{
+			"src": "images/icon192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		}
+	]
+}
