--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 	"short_name": "PWAサンプル",
 	"name": "PWAサンプルアプリ",
 	"display": "standalone",
-	"start_url": "index.html",
+	"start_url": "./index.html",
 	"icons": [
 		{
-			"src": "images/icon192.png",
+			"src": "./images/icon192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		}
